--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-3">
                     <h4 class="text-black title size-3"><i class="fas fa-code pb-1"></i><br>Languages maitrisés.</h4>
                     <h6 class="subtitle text-grey-600 size-7 pt-1">Utilisant la suite Jetbrains pour développer, celle-ci me fournit un plugin permettant d'obtenir le nombre de ligne de code tapé en direct.</h6>
-                    <a class="button" href="">Voir le site</a>
+                    <a class="button" href="https://codestats.net/users/NHClement" target="_blank">Voir le site</a>
                 </div>
                 <div class="col-lg-9 mt-5">
                     <div class="row mb-4">
