add some features and contents

--- a/index.html
+++ b/index.html
@@ -20,31 +20,21 @@
                 </h4>
                 <h6 class="subtitle text-grey-300 size-5 text-centered animated fadeInUp">Github: <a
                         href="https://github.com/PHClement" target="_blank" class="text-blue-200">@PHClement</a></h6>
+                <p class="size-6 text-centered mb-1">Cliquez-ici pour accèder aux différentes sections</p>
                 <p class="text-centered is-centered animated scaleIn">
                     <a class="button size-small white mr-1 is-rounded" onclick="scrollToElement('#devZone')">Développement</a><a
-                        class="button size-small white is-rounded">Infographie</a><a
+                        class="button size-small white is-rounded" onclick="scrollToElement('infoZone')">Infographie</a><a
                         class="button size-small white ml-1 is-rounded" onclick="scrollToElement('#videoZone')">Montage
                     vidéo</a>
                 </p>
+                <div class="container mt-6" id="devZone">
+                    <h1 class="text-white title size-2">Développement</h1>
+                    <h1 class="text-grey-100 subtitle size-6">Mes compétences & projets en programmation.</h1>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="container mt-7" id="presentation">
-        <h1 class="text-black title size-2">Présentation personnel</h1>
-        <h1 class="text-grey-600 subtitle size-6">Tout ce qui est à propos de moi et de mon travail.</h1>
-        <hr/>
-        A FAIRE
-    </section>
-
-    <section class="hero gradient-cyanToPurple mt-7" id="devZone">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="text-white title size-2">Développement</h1>
-                <h1 class="text-grey-100 subtitle size-6">Mes compétences & projets en programmation.</h1>
-            </div>
-        </div>
-    </section>
     <div class="container">
         <div class="col-12">
             <div id="codestats">
@@ -138,7 +128,7 @@
                                 </div>
                             </div>
                             <div class="row mb-4">
-                                <div class="col-lg-12 mt-2">
+                                <div class="col-lg-12 mt-3">
                                     <div class="card">
                                         <div class="card-content">
                                             <div class="media">
@@ -179,7 +169,102 @@
                             projets propriétaires ou des projets open-sources.</h6>
                     </div>
                     <div class="col-lg-9 mt-5">
-                        Bientôt...
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <div class="media">
+                                            <div class="media-content">
+                                                <figure class="image is-48x48">
+                                                    <img src="assets/img/logo_nav.880c7fd3.png" class="nocturne_image blue-500">
+                                                </figure>
+                                                <p class="title size-4 mt-1">Nocturne</p>
+                                                <div class="subtitle size-6 pb-1">
+                                                    Nocturne, c’est aussi l’application de sortie, vous cherchez une soirée, quelqu'un avec qui allez boire un coup, une soirée chez quelqu'un, c'est très simple, rendez-vous sur l'application Nocturne et obtenez la liste de toute les sorties disponibles près de vous, rejoignez le groupe de la sortie, discutez et organisez ensemble la soirée.
+                                                    <br>
+                                                    <a target="_blank"
+                                                       class="button mt-1">Bientôt...</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 mt-4">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <div class="media">
+                                            <div class="media-content">
+                                                <figure class="image is-48x48">
+                                                    <img src="assets/img/flatize.png" class="ph_image blue-500">
+                                                </figure>
+                                                <p class="title size-4 mt-1">Flatize</p>
+                                                <div class="subtitle size-6 pb-1">
+                                                    Flatize est un framework CSS Responsive destiné à réalisé facilement et rapidement un site web dans un standard du design web actuel: le flat. Ce site vitrine est d'ailleurs réalisé sous ce framework.
+                                                    <br>
+                                                    <a target="_blank"
+                                                       class="button mt-1" href="https://nocturneio.github.io/Flatize/">Site du framework</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 mt-4">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <div class="media">
+                                            <div class="media-content">
+                                                <figure class="image is-48x48">
+                                                    <img src="assets/img/hooopla.png" class="nocturne_image blue-500">
+                                                </figure>
+                                                <p class="title size-4 mt-1">Hooopla (open-source)</p>
+                                                <div class="subtitle size-6 pb-1">
+                                                    Hooopla Stream est un self-hosted website permettant de télécharger automatiquement vos séries préféres ainsi que vos films préférés à la Netflix, sur tout vos appareils (web, application).
+                                                    <br>
+                                                    <a target="_blank"
+                                                       class="button mt-1" href="https://github.com/HoooplaStream">Voir les sources</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="hero gradient-cyanToPurple mt-7" id="infoZone">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="text-white title size-2">Infographie</h1>
+                <h1 class="text-grey-100 subtitle size-6">Mes projets en montage vidéo.</h1>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div class="col-12">
+            <div>
+                <div class="row mt-2">
+                    <div class="col-lg-3">
+                        <h4 class="text-black title size-3"><i class="fas fa-pencil-alt"></i><br>Mes<br>réalisations.</h4>
+                        <h6 class="subtitle text-grey-600 size-7 pt-1">CLab Studio est un projet que j'ai monté sur
+                            Instagram, avec l'aide d'un ami possédant un drône. Je réalise la vidéo à partir de films de ses voyages.</h6>
+                    </div>
+                    <div class="col-lg-9 mt-2">
+                        <div class="row">
+                            <div class="col card card-info" style="min-height: 200px; min-width: 200px;">
+                                <img src="assets/img/hoopla.png">
+                            </div>
+                            <div class="col card card-info" style="min-height: 200px; min-width: 200px;">
+                                <img src="assets/img/nocturne_p.png" style="padding: 30px;">
+                            </div>
+                            <div class="col card card-info" style="min-width: 200px;">
+                                <img src="assets/img/flatize_c.png" style="padding: 20px 20px">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -200,8 +285,7 @@
                     <div class="col-lg-3">
                         <h4 class="text-black title size-3"><i class="fas fa-film"></i><br>CLab<br>Studio.</h4>
                         <h6 class="subtitle text-grey-600 size-7 pt-1">CLab Studio est un projet que j'ai monté sur
-                            Instagram, avec l'aide d'un ami possédant un drône, lui est chargé de filmer avec son drône
-                            ses voyages, et moi je suis chargé de réalisé la vidéo et de la publié.</h6>
+                            Instagram, avec l'aide d'un ami possédant un drône. Je réalise la vidéo à partir de films de ses voyages.</h6>
                     </div>
                     <div class="col-lg-9 mt-2">
                         <div class="row mt-2">
